--- a/041. First Missing Positive.md
+++ b/041. First Missing Positive.md
@@ -1,5 +1,7 @@
 // my solution is to swap two vlaues
 
+
+
 ```
 public class Solution {
     public int firstMissingPositive(int[] A) {
@@ -26,4 +28,75 @@ public class Solution {
 so i will take this as an example to simulate This
 
 // -1  4  2  1  9 10
-// 
+//
+
+
+public firstMissingPositive(int[] A){
+
+  int i = 0;
+  // so it will iterate from 0 to the end of the arr
+  while(i < A.length){
+
+    // A[i] == i+1 mean it's in the right position.
+    // take 3 4 1 0 as an example,
+
+    // 3 should be move to the last one, 4 not change
+    if(A[i] == i+1){
+
+
+    }
+
+  }
+
+
+}
+
+private void swap(int[] A, int i, int j){
+        int temp = A[i];
+        A[i] = A[j];
+        A[j] = temp;
+    }
+
+
+
+    int firstMissingPositive(int[] arr){
+
+      if(arr == null || arr.length == 0)
+            return 1;
+        if(arr.length == 1){
+            return arr[0] == 1?2:1;
+        }
+
+
+      // filter some capsules
+
+      int i = 0;
+int l = arr.length;
+      while(i<l){
+        // check if we should skip
+        if(arr[i] == i+1 || arr[i] >= l || arr[i]<=0  ){
+
+          // if we allow l and 0
+          // take this as an example
+          // 3 4 2 8 1 -1 5 7
+          // the length l = 7 here
+
+          // we should skip 7,
+          // and we should skip 0 as well
+
+          i++;
+        }else{
+          // 3 change to 8 and STOP
+          // 4 -> 1
+          // 1 -> 8 stop
+          if(arr[arr[i]-1] != arr[i]){
+            swap(arr, arr[i]-1, i);
+          }else{
+            i++;
+          }
+        }
+
+
+      }
+
+    }
