--- a/743. Network Delay Time.md
+++ b/743. Network Delay Time.md
@@ -34,6 +34,54 @@ so you just need to return the maximum time in this table.
  **/
 public int networkDelayTime(int[][] times, int N, int K){
 
+  // 1. filter some cases
+  if(times == null || times.length == 0){
+    return -1;
+  }
+
+  // 2. use a hashmap to store the key = start, value-> a hashmap map from the end to the value
+
+  Map<Integer, Map<Integer, Integer>> path = new HashMap();
+
+  for(int[] row: times){
+    Map<Integer, Integer> m = path.get(row[0]);
+    if(m == null){
+      m = new HashMap();
+      path.put(row[0],m);
+    }
+
+    Integer dis = m.get(row[1]);
+    // try to find the distance from start to end
+    if(dis == null || dis > row[2]){
+      // if the current
+      m.input(row[1],row[2]);
+    }  
+  }
+
+  Map<Integer, Integer> distanceMap= new HashMap();
+  // the key is the number of the nodes
+  // the value is the distance smallest to this node from K
+
+  PriorityQueue<int[]> pq = new PriorityQueue<>((i1, i2) -> {return i1[1] - i2[1];});
+
+  pq.offer(new int[]{K, 0});
+
+  while(!pq.isEmpty()){
+
+    int[] cur = pq.poll();
+    // poll an array from the pq
+    int node = cur[0];
+    int distance = cur[1]; // the distance from this problem is just too hard for me now, i will do this later! i promise, maybe tomorrow.
+
+    // i think a good idea is you firstly catch the right way to solve this problem and then code by yourself from scratch.  
+
+
+    } // end of while
+
+
+
+
+
 
 
 }
