--- a/033. Search in Rotated Sorted Array.md
+++ b/033. Search in Rotated Sorted Array.md
@@ -1,3 +1,16 @@
+```
+
+// firstly you need to search the location they rotate the array.
+
+
+
+
+```
+
+
+
+
+
 class Solution {
 public int search(int[] nums, int target) {
 
