--- a/053.Maximum subarray.md
+++ b/053.Maximum subarray.md
@@ -5,20 +5,27 @@ the problem here is to get a subarray of an array, whose sum is largest.
 iterate the array, and when the sum is less than 0, it means the later numbers plus this subarray would be smaller, so we can skip those combinations.
 
 ```
-int sum = 0;
-int result  = nums[0];
-for (int n : nums){
-  if(sum<0){
-    // start a new subarray
-    sum = n;
-  }else{
-    // else it potential might result in a better subarray
-    sum += n;
-  }
 
-  // compare the current sum with the previous largest threeSum
-  result = Math.max(sum, result);
-}
 
-return result;
+        if(nums == null || nums.length == 0){
+            return 0;
+        } // end of if
+
+
+        int res = nums[0];
+        int temp = 0;
+        for(int i = 0; i < nums.length ; i++){
+
+            temp+=nums[i];
+
+            res = Math.max(res,temp);
+
+            if(temp < 0){
+                temp = 0;
+            } // end of if
+        } // end of for I
+
+        return res;
+
+        
 ```
