--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -20,3 +20,26 @@ class Solution {
 }
 
 //o n for time
+
+
+
+```
+
+
+        if(prices == null || prices.length <= 0){
+            return 0;
+        } // end of if
+
+        int small = prices[0];
+        int result = 0;
+        for(int i = 1; i < prices.length ; i++){
+            if(small > prices[i]){
+                small = prices[i];
+            } // end of if
+
+            result = Math.max(result,prices[i] - small);
+        } // end of for I
+        return result;
+
+
+```
