--- a/152. Maximum product subarray.md
+++ b/152. Maximum product subarray.md
@@ -11,11 +11,56 @@ Input: [-2,0,-1]
 Output: 0
 Explanation: The result cannot be 2, because [-2,-1] is not a subarray.
 
+---
+
+So the idea here is to ,
+let's take 2 3 -2 4 as an example
+
+what about just one negative number,
+
+  2 3  -2 4   -1
+1 2 6  -2 -8  48
+1 2 6 -12 -48  8
+
+  -2 0 -1
+1 -2 0 -1
+1 -2 0 -1
+
+
+
 ```
 
 
 public int maxProduct(int[] A) {
 
+  if(A.length <=0){
+    return 0;
+    } // end of if
+
+    if(A.length == 1){
+      return A[0];
+      } // end of if
+  int res = Integer.MIN_VALUE;
+  int imax = A[0];
+  int imin = imax;
+
+  for(int i = 1; i < A.length ; i++){
+    if(A[i]<0){
+      // swap
+
+      int temp = imax;
+      imax = imin;
+      imin = temp;
+      } // end of if
+
+  imax = Math.max(imax*A[i],A[i]);
+  imin = Math.min(imin *A[i],A[i]);
+
+  res = Math.max(imax,res);
+
+    } // end of for I
+
+    return res;
 
 }
 
