--- a/224.basic calculator.md
+++ b/224.basic calculator.md
@@ -57,6 +57,27 @@ else if(c == '('){
   number becomes 1
   then comes the plus, and we add this 1 to the result, it becomes 1
 
-  then come 6, 
+  then come 6,
+
+```
+
+```
+
+public int calculate(String s) {
+
+    int res;
+    Stack<Integer> stack = new Stack();
+// size, pop, push, peek, empty
+
+    int num;
+
+    for(int i = 0; i < s.length() ; i++){
+
+      
+      } // end of for I
+
+
+}
+
 
 ```
