--- a/152. Maximum product subarray.md
+++ b/152. Maximum product subarray.md
@@ -66,3 +66,45 @@ public int maxProduct(int[] A) {
 
 
 ```
+
+
+```
+
+
+
+public int maxProduct(int[] A) {
+
+
+    // take       2 3  -2       4 as an example
+
+    // max * cur  2 6  -6  -2  -8    4
+    // min * cur  2 3 -12 -12 -48 -48
+    // cur        2 3  -2       4
+    // cur        2 3  -2       4
+
+    if( A == null || A.length == 0){
+        return 0;
+    }
+
+    int max = A[0];
+    int min = A[0];
+
+    int res = A[0];
+
+    for(int i = 1; i < A.length ; i++){
+        if(A[i] < 0){
+            int temp = max;
+            max = min;
+            min = temp;
+        } // end of if
+
+        max = Math.max(max*A[i],A[i]);
+        min = Math.min(min*A[i],A[i]);
+        res = Math.max(res,max);
+    } // end of for I
+
+    return res;
+}
+
+
+```
