--- a/079. Word Search.md
+++ b/079. Word Search.md
@@ -1,3 +1,58 @@
+```
+
+static boolean[][] visited;
+static int row;
+static int col;
+
+public  boolean exist ( char [][] board, String word){
+
+  if( board== null || board.length == 0){
+    return false;
+  }
+
+ row = board .length;
+ col =  board[0].length;
+
+  visited = new boolean [row][col];
+
+  for(int i = 0; i < row ; i++){
+    for(int j = 0; j < col ; j++){
+      if(board[i][j] == word.charAt(0) && search(board, word, i, j, 0)){
+        return true;
+        } // end of if
+      } // end of for j
+    } // end of for I
+
+    return false;
+}
+
+private boolean search (char[][] board, String word, int i, int j, int index){
+
+  if(index == word.length()){
+    return true;
+    } // end of if
+
+  if(i>= row || i<0 || j>=col || j<0 || visited[i][j] || word.charAt(index)!=board[i][j]){
+    return false;
+    } // end of if
+
+  // temporarily visited this cell,
+
+  visited[i][j] = true;
+
+  if(search(board, word, i+1,j,index+1) ||
+  search(board, word, i-1,j,index+1) ||){} // end of if
+search   |   |  
+
+
+
+}
+
+
+```
+
+
+
 // 1. search the start O(mn)
 
 // 2.
