--- a/264. Ugly Number II.md
+++ b/264. Ugly Number II.md
@@ -28,3 +28,35 @@ n does not exceed 1690.
 | dp[t2]*2 | 4    | 4<- | 6   | 6<- | 8<- | 10  |
 | dp[t3]*3 | 3 <- | 6   | 6   | 6<- | 9   | 9<- |
 | dp[t5]*5 | 5    | 5   | 5<- | 10  | 10  | 10  |
+
+```
+
+public int nthUglyNumber(int n) {
+    
+    int[] dp = new int[n];
+    dp[0] = 1;
+
+    int t2 = 0, t3 = 0, t5 = 0;
+
+    // okay let's take n = 10 as an example
+
+
+    for(int i = 1; i < n ; i++){
+
+        dp[i] = Math.min(dp[t2]*2,Math.min(dp[t3]*3,dp[t5]*5));
+
+        if(dp[i] == dp[t2]*2){ t2++;} // end of if
+        if(dp[i] == dp[t3]*3){ t3++;} // end of if
+        if(dp[i] == dp[t5]*5){ t5++;} // end of if
+
+
+
+    } // end of for I
+
+    return dp[n-1];
+
+
+}
+
+
+```
