--- a/079. Word Search.md
+++ b/079. Word Search.md
@@ -115,3 +115,75 @@ public boolean exist(char[][] board, String word) {
 }
 
 // i just find my method is too complex
+
+
+
+not the last time to this probelm
+
+
+```
+
+
+class Solution {
+    static boolean [][] visited;
+    static int row;
+    static int col;
+
+    public boolean exist(char[][] board, String word) {
+
+        if( board== null || board.length == 0){
+            return false;
+        }
+
+         row = board .length;
+         col =  board[0].length;
+
+
+
+        visited = new boolean[row][col];
+        for(int i = 0; i < row ; i++){
+            for(int j = 0; j < col ; j++){
+
+                if(board[i][j] == word.charAt(0)){
+                    if(search(board, word, i,j,0)){
+                        return true;
+                    } // end of if
+                } // end of if
+            } // end of for j
+        } // end of for I
+
+        return false;
+
+
+
+    }
+
+    private boolean search(char[][] board, String s, int i, int j, int index){
+        if(index == s.length() ){
+            return true;
+        } // end of if
+
+        if(i<0 || i >= row || j<0 || j>= col || s.charAt(index) != board[i][j] || visited[i][j]){
+            return false;
+        } // end of if
+
+        visited[i][j] = true;
+        boolean result = false;
+        if(search(board, s, i+1,j,index+1) ||
+          search(board, s, i-1, j, index+1) ||
+          search(board, s, i, j-1, index+1) ||
+          search(board, s, i, j+1, index+1)){
+            result  = true;
+        } // end of if
+
+
+        visited[i][j] = false;
+
+        return result;
+
+
+
+    }
+}
+
+```
