--- a/076. Minimum Window Substring.md
+++ b/076. Minimum Window Substring.md
@@ -187,3 +187,124 @@ class Solution {
     }
 }
 ```
+
+maybe it's not the last time,
+so the idea here is to use a count when it changes from 01 to 0, it means we missed sth ,
+
+
+```
+public class Solution{
+
+  public String minWindow(String s, String t){
+
+    // 1. if it's null, just reuturn empty;
+
+    if(s == null || t == null )
+    {
+      return "";
+      } // end of if
+
+    int countToBeContained = t.length() ;
+    int minLen  = Integer.MAX_VALUE;
+    int start = -1;
+
+    int[] dict = new int[128];
+    for(char c: t .toCharArray()){
+      dict[c] ++;
+    }
+
+    int fast = 0, slow = 0;
+
+    while( fast < s.length() ){
+      if(dict[s.charAt(fast++)]-- >0 ){
+        countToBeContained --;
+
+        } // end of if
+
+
+        while(countToBeContained == 0){
+          if(dict[s.charAt(slow++) ]++ == 0){
+            countToBeContained ++;
+            } // end of if
+
+            if(fast - slow +1 <minLen ){
+              startIndex = slow - 1;
+              minLen = fast - slow +1;
+              } // end of if
+          } // end of while
+      } // end of while
+
+
+return startIndex == -1?"":s.substring(startIndex, startIndex + minLen );
+
+
+
+
+}
+}
+
+
+
+```
+
+
+```
+
+// 1. so firstly check the null
+if(s == null || t == null){
+  return "";
+  } // end of if
+
+int count = t.length() ;
+int minLen = Integer.MAX_VALUE;
+int start = -1;
+
+int[] dict = new int[128];
+for(char c: t.toCharArray()){
+
+  dict[c]++;
+}
+
+int fast = 0;
+int slow = 0;
+
+while( fast<s.length() ){
+
+  // if the character m
+  if(dict[s.charAt(fast++)] -- > 0){
+    count --;
+    } // end of if
+
+    // take adobecodebanc as an exmaple,
+
+    // and the t is abc.
+    // so the initial count is 3, and then,
+    // the dict becomes a 1, b 1, c 1.
+
+    // then we iterate from the beginning to the end, what will happen
+
+    // fast is 0 here, and dict, okay, so if it's not 0 or less before we adpat this char, then we just minus the count
+
+    while( count == 0){
+      // then we shrink the substring
+
+      if(dict[s.charAt(slow++)]++ == 0){
+        count ++;
+        } // end of if
+
+// if the length is smaller
+
+        if(fast - slow + 1 < minLen ){
+
+          start = slow-1;
+          minLen = fast - slow +1;
+          } // end of if
+      } // end of while
+
+
+  } // end of while
+
+  return start == -1? "":s.substring(start, start+minLen ); 
+
+
+```
