--- a/265. Paint House II.md
+++ b/265. Paint House II.md
@@ -26,6 +26,49 @@ take this as an examples
 
 1  5 3
 
+```
+
+public int minCostII(int [][] A){
+  if(A == null || A.length  == 0){
+    return 0;
+    } // end of if
+
+  int n = A.length;
+  int k = A[0].length;
+
+  int min1 = -1, min2 = -1;
+
+  for(int i = 0; i < n ; i++){
+    int last1 = min1, last2 = min2;
+    min1 = -1; min2 = -1;
+
+    for(int j = 0; j < k ; j++){
+      if(j!=last1){
+        A[i][j] += last1<0?0:A[i-1][last1];
+        } // end of if
+        else{
+          A[i][j] += last2<0?0:A[i-1][last2];
+        }
+
+        if(min1<0 || A[i][j] < A[i][min1]){
+          min2 = min1;
+          min1 = j;
+          } // end of if
+        else if(min2< 0 || A[i][j] < A[i][min2]){
+          min2 = j;
+
+          } // end of if
+
+      } // end of for j
+
+    } // end of for I
+
+    return A[n-1][min1];
+}
+
+
+```
+
 so the samllest one is 1, and its index = 0. the second smallest one is 3
 
 // deal with some corner cases
