--- a/621. Task Scheduler.md
+++ b/621. Task Scheduler.md
@@ -21,3 +21,28 @@ public  int leastInterval(char[] tasks, int n ){
 
 
 ```
+
+```
+
+    // firstly i will use a int[] to count the frequency of them
+
+    int[] count = new int[26];
+    for(char c: tasks){
+        count[c-'A'] ++;
+    }
+
+    // then sort it to determine the most frequenct chars
+    java.util.Arrays.sort(count); //Collections.reverseOrder()
+
+    // there might be more than 1 char, that is most frequenct, so
+
+    int i = 25;
+
+    while( i>=0 && count[i] == count[25]){
+        i--;
+    } // end of while
+
+    return Math.max(tasks.length, (count[25]-1)*(n+1) + 25-i);
+
+
+```
