--- a/256. Paint House.md
+++ b/256. Paint House.md
@@ -10,7 +10,7 @@ just use dp is okay.
         // n by 3
 
         // so i think we can use dp here.
-
+ 
         // if u choose 17, you can not choose 16,
 
         // 0 0 0
@@ -36,3 +36,48 @@ just use dp is okay.
         }
 
         return  Math.min(costs[i-1][2], Math.min(costs[i-1][0],costs[i-1][1]));
+
+
+
+```
+
+public int minCostII(int[][] A){
+  if( A== null || A.length == 0){
+    return 0;
+  }
+
+  int row = A .length, col =  A[0].length;
+
+  int min1 = -1, min2 = -1;
+
+  for(int i = 0; i < row ; i++){
+    int last1 = min1, last2 = min2;
+    min1 = -1;
+    min2 = -1;
+
+    for(int j = 0; j < col ; j++){
+
+      if(j!=last1){
+        A[i][j] += last1<0?0:A[i-1][last1];
+        } // end of if
+        else{
+          A[i][j] += last2<0?0:A[i-1][last2];
+        }
+
+        if(min1<0 || A[i][j] < A[i][min1]){
+         min2 = min1;
+         min1 = j;
+          } // end of if
+          else if(min2<0 || A[i][j]<A[i][min2]){
+            min2 = j
+            } // end of if
+      } // end of for j
+
+
+    } // end of for I
+
+    return A[row-1][min1];
+}
+
+
+```
