--- a/056. merge intervals.md
+++ b/056. merge intervals.md
@@ -79,3 +79,118 @@ public  List<Interval > merge(List<Interval> intervals){
 
 
 ```
+
+
+// an idea is how to visualize the algorithm smartly,
+
+```
+
+public List<Interval> merge(List<Interval> intervals) {
+	// sort start&end
+	int n = intervals.size();
+	int[] starts = new int[n];
+	int[] ends = new int[n];
+	for (int i = 0; i < n; i++) {
+		starts[i] = intervals.get(i).start;
+		ends[i] = intervals.get(i).end;
+	}
+	Arrays.sort(starts);
+	Arrays.sort(ends);
+	// loop through
+	List<Interval> res = new ArrayList<Interval>();
+	for (int i = 0, j = 0; i < n; i++) { // j is start of interval.
+		if (i == n - 1 || starts[i + 1] > ends[i]) {
+			res.add(new Interval(starts[j], ends[i]));
+			j = i + 1;
+		}
+	}
+	return res;
+}
+
+\\ i   2  
+\\ 1 2 8 15
+\\ 3 6 10 18
+
+8>6 so when i = 1,
+put starts[0] and ends[1] j=i+1 = 2
+put starts[]
+```
+
+hope this is the last time to solve this probelm,
+
+so the frst idea to this problem is to sort according to the start, and when the
+
+1 3
+2 6
+
+the start of the next interval for example, 2 6, the start is 2, and it's less than than the previous end, so we just combine them.
+
+and choose the largest end of these two, which is 6 here,
+
+and just continue, the time complexity of this method is O(N), since you need to sort the array firstly, the time complexity is O(nlogn)
+
+another method is to sort
+
+
+```
+public  List<Interval > merge(List<Interval> intervals){
+
+  int n = intervals.size();
+  int[] starts = new int[n];
+  int[] ends = new int[n];
+
+  for(int i = 0; i < n ; i++){
+    starts[i] = intervals.get(i).start;
+    ends[i] = intervals.get(i).end;
+
+    } // end of for I
+
+  java.util.Arrays.sort(starts); //Collections.reverseOrder()
+  java.util.Arrays.sort(ends); //Collections.reverseOrder()
+
+  for(int i = 0, shift = 0; i < n ; i++){
+    if(i == n-1 || ) {} // end of if
+    } // end of for I
+}
+
+```
+
+
+```
+
+public  List<Interval > merge(List<Interval> intervals){
+
+  if( intervals== null || intervals.size() == 0){
+    return intervals;
+  }
+
+  int n = intervals.size();
+
+  // so
+  int[] starts = new int[n];
+  int[] ends = new int[n];
+
+  for(int i = 0; i < n ; i++){
+    starts[i] = intervals.get(i).start;
+    ends[i] = intervals.get(i).end;
+
+    } // end of for I
+
+  java.util.Arrays.sort(starts); //Collections.reverseOrder()
+  java.util.Arrays.sort(ends); //Collections.reverseOrder()
+
+  List<Interval> list = new ArrayList();
+
+  for(int i = 0, start = 0; i < n ; i++){
+    if(i == n-1 || starts[i+1] > end[i]){
+      list.add(starts[j],end[i]);
+      start = i+1;
+      } // end of if
+    } // end of for I
+
+return list; 
+
+}
+
+
+```
