--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -185,3 +185,36 @@ public int ladderLength(String beginWord, String endWord, Set<String> wordList){
 }
 
 ```
+
+
+```
+
+public int ladderLength(String beginWord, String  endWord, List<String > wordList){
+
+  Set< String > set = new HashSet();
+
+  for(int i = 0; i < wordList.size()  ; i++){
+    set.add(wordList.get(i));
+    } // end of for I
+
+  if(!set.contains(endWord)){
+    return 0;
+    } // end of if
+
+  Set<String > begin = new HashSet();
+  Set<String > end = new HashSet();
+
+  int len = 1;
+  int strLen = beginWord.length() ;
+  begin.add(beginWord);
+  end.add(endWord);
+
+  Set<String > visited = new HashSet();
+
+  while( !end.isEmpty()&&  !begin.isEmpty()){
+    
+    } // end of while
+}
+
+
+```
