--- a/433. Minimum Genetic Mutation.md
+++ b/433. Minimum Genetic Mutation.md
@@ -40,3 +40,92 @@ end:   "AACCCCCC"
 bank: ["AAAACCCC", "AAACCCCC", "AACCCCCC"]
 
 return: 3
+
+---
+
+so the same idea as the word ladder problem,
+
+so what we can do is to use a bfs, double sides.
+
+```
+class Solution {
+    public int minMutation(String start, String end, String[] bank) {
+
+        int strLen = start.length();
+
+        Set<String > set = new HashSet();
+        for(String w : bank){
+            set.add(w);
+        }
+
+        if(!set.contains(end)){
+            return -1;
+        } // end of if
+
+        Set<String > beginSet   = new HashSet();
+        Set<String > endSet  =  new HashSet();
+        beginSet.add(start);
+        endSet.add(end);
+
+        Map<Character, Character> map = new HashMap();
+        map.put('A','C');
+        map.put('C','G');
+        map.put('G','T');
+        map.put('T','A');
+
+        int minLen = 1;
+
+        Set<String> visited  = new HashSet<String>();
+
+        while(!beginSet .isEmpty() && !endSet .isEmpty() ){
+
+            if(beginSet .size() > endSet .size()){
+                Set< String > temp = beginSet ;
+                beginSet = endSet ;
+                endSet = temp;
+            } // end of if
+
+            Set<String> newb = new HashSet<String>();
+            for(String w:beginSet ){
+                char[] cs = w.toCharArray();
+                for(int i = 0; i < strLen  ; i++){
+                    for(int j = 0; j < 3 ; j++){
+                        cs[i] = map.get(cs[i]);
+                        String tempStr = new String(cs);
+
+                        if(endSet .contains(tempStr)){
+                            return minLen ;
+                        }// end of if
+
+                        if(set.contains(tempStr)){
+                            set.remove(tempStr);
+                            newb.add(tempStr);
+                        } // end of if
+                    } // end of for j
+                    cs[i] = map.get(cs[i]);
+                } // end of for I
+
+
+
+            }
+
+            minLen ++;
+            
+
+        } // end of while
+
+
+        return -1;
+
+    }
+}
+
+
+
+```
+
+
+```
+
+
+```
