--- a/560. Subarray Sum Equals K.md
+++ b/560. Subarray Sum Equals K.md
@@ -77,3 +77,31 @@ cur = 2
 sum = 12
 contains 12 -4 = 8
 reuslt ++
+
+
+```
+
+
+public int subarraySum(int[] nums, int k) {
+  int sum = 0;
+  int count = 0;
+  Map<Integer ,Integer > map = new HashMap();
+  map.put(0,1);
+  for(int cur: nums){
+    sum+=cur;
+
+    if(map.containsKey(sum - k)){
+      count+=map.get(sum-k);
+      } // end of if
+      else{
+        map.put(sum,map.getOrDefault(sum,0)+1);
+      }
+
+  }
+
+  return count;
+
+}
+
+
+```
