--- a/076. Minimum Window Substring.md
+++ b/076. Minimum Window Substring.md
@@ -304,7 +304,58 @@ while( fast<s.length() ){
 
   } // end of while
 
-  return start == -1? "":s.substring(start, start+minLen ); 
+  return start == -1? "":s.substring(start, start+minLen );
+
+
+```
+
+hope this is the last time to solve this problem
+
+```
+
+class Solution {
+    public String minWindow(String s, String t) {
+
+      if(s == null || s.length() == 0 || t = null || t.length()== 0){
+        return "";
+        } // end of if
+
+      int count = t.length() ;
+      int start = -1;
+      int minLen = Integer.MAX_VALUE ;
+      int[] dict = new int[128];
+
+      for(char c: t.toCharArray()){
+        dict[c]++;
+      }
+
+      int fast = 0;
+      int slow = 0;
+      while( fast < s.length() ){
+
+        if(dict[s.charAt(fast++)]-- > 0){
+          count -- ;
+
+          } // end of if
+
+        while( count == 0){
+          if(dict[s.charAt(slow++)] ++ == 0){
+            count ++;
+            } // end of if
+          if(fast - slow + 1< minLen ){
+            minLen = fast - slow+1;
+            start = slow-1;
+
+            } // end of if
+
+          } // end of while
+
+
+        } // end of while
+    }
+
+    return start==-1?"":s.substring(start,start+minLen );
+}
 
 
 ```
