--- a/094. Binary Tree Inorder Traversal.md
+++ b/094. Binary Tree Inorder Traversal.md
@@ -19,6 +19,33 @@ public List<Integer > inorderTraversal(TreeNode root){
     cur = cur.right;
 }
 
-return list; 
+return list;
+
+```
+
+```
+
+public  List<Integer > inorderTraversal(TreeNode root){
+
+  List<Integer > list = new ArrayList();
+
+  Stack<TreeNode > stack = new Stack();
+// size, pop, push, peek, empty
+
+  TreeNode cur = root;
+  while( cur !=  null || !stack.isEmpty() ){
+    while( cur !=null ){
+      stack.add(cur);
+      cur = cur.left;
+      } // end of while
+
+    cur = stack.pop();
+    list.add(cur.val);
+    cur = cur.right;
+    } // end of while
+
+    return list;
+}
+
 
 ```
