--- a/123. Best Time to Buy and Sell Stock III.md
+++ b/123. Best Time to Buy and Sell Stock III.md
@@ -25,3 +25,34 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 
 ---
+
+```
+
+public int maxProfit(int[] A){
+  if( A== null || A.length == 0){
+    return 0;
+
+  }
+
+  int K =2 ;
+  int[][] f = int[K+1][A.length];
+  int maxProf = 0;
+
+  for(int i = 1; i < K ; i++){
+    int tmpMax = f[i-1][0] - A[0];
+    for(int j = 1; j < A.length ; j++){
+      f[i][j] = Math.max(f[i][j-1],A[j]+tmpMax);
+      tmpMax = Math.max(tmpMax,f[i-1][j]-A[j]);
+      maxProf = Math.max(f[i][j],maxProf);
+
+    } // end of for j
+
+
+  } // end of for i
+
+  return maxProf;
+
+}
+
+
+```
