--- a/300. longest increasing subsequence.md
+++ b/300. longest increasing subsequence.md
@@ -53,3 +53,54 @@ public  int lengthOfLIS(int[] nums){
     int i =
   }
 }
+
+
+
+hope this is the last time to solve this problem
+```
+
+public int lengthOfLIS(int[] nums){
+
+  // so idea here is to
+  // 10 9 2 5 3 7 101 18
+  // then
+  // 10
+  // 9
+  // 2
+  // 2 5
+  // 2 3
+  // 2 3 7
+  // 2 3 7 101
+  // 2 3 7 18
+  // return 4
+
+  if( nums== null || nums.length == 0){
+    return 0;
+  }
+  int [] temp = new int[nums.length];
+  int size = 0;
+  for(int n: nums){
+    int i = 0, j = size;
+    while( i< j){
+      int m = (i+j)/2;
+      if(temp[m]<x){
+        i = m+1;
+        } // end of if
+      else{
+        j = m;
+      }
+
+      temp[i] = x;
+      if(i == size){size ++ ;} // end of if
+    } // end of while
+
+  }
+
+
+
+
+}
+
+
+
+```
