--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -212,9 +212,53 @@ public int ladderLength(String beginWord, String  endWord, List<String > wordLis
   Set<String > visited = new HashSet();
 
   while( !end.isEmpty()&&  !begin.isEmpty()){
-    
+
     } // end of while
 }
+
+
+```
+
+hope this is the last time to solve this problme
+
+
+```
+public  int ladderLength(String beginWord, String endWord, List<String > wordList){
+
+  Set<String > set = new HashSet();
+  for(String s: wordList){
+    set.add(s);
+  }
+
+  if(!set.contains(beginWord)){
+    return 0;
+    } // end of if
+
+  if(!set.contains(endWord)){
+    return 0;
+    } // end of if
+
+  Set<String > forward = new HashSet();
+  Set<String > backward = new HashSet();
+
+  forward.add(beginWord);
+  backward.add(endWord);
+
+  while( !forward.isEmpty() && !backward.isEmpty()){
+
+    if(forward.size() > backward.size()){
+      Set<String > temp = forward;
+      forward  = backward;
+      backward = temp;
+
+
+      } // end of if
+
+    for(String ){}
+
+  } //) end of while
+}
+ 
 
 
 ```
