--- a/561. shortest unsorted continuous subarray.md
+++ b/561. shortest unsorted continuous subarray.md
@@ -1,6 +1,6 @@
 ```
 
-
+public int findUnsortedSubarray(int[] nums) {
         if(nums.length == 1){
             return 0;
         }
@@ -42,6 +42,45 @@
         }
         // System.out.println(l + "," + r);
         return r - l -1;
+}
+
+```
+
+So the problem here we want to solve is to,
+
+```
+
+public int findUnsortedSubarray(int[] nums) {
+
+  // return 0 if the length is 1
+
+  // l and r from the two sides of the array
+
+  // l from the most left to right, stop until one number is larger than the next one,
+
+  // do the same thing to r
+
+  // search from l to r, the min and max of this subarray
+
+  // expand use min and max from the code above.
+
+  // return r-l-1
+
+  /***
+   *
+   *
+   **/
+
+  // now we will take this as an example
+
+  // 0 1   2  3   4  5  6
+  // 2, 6, 4, 8, 10, 9, 15
+  // r                  l
+  //    r            l
+  //    min = 4, max = 10
+  // expand
+}
+
 
 
 ```
