--- a/679. 24 Game.md
+++ b/679. 24 Game.md
@@ -1,3 +1,25 @@
+
+1. use a boolean to store the result
+2. use eps to avoid divide by 0
+
+3. build a helper function, to
+
+take this as an example 4, 1, 8, 7
+
+iterate i from 1  8    7
+iterate j from 4, 4 1, 4 1 8
+
+for example for 1 and 4, iterate every combination of these two numbers and put their result for the next iteration,
+
+for example 1*4 and 8 7, three number to get 24,
+
+if there are only one number, test if it's 24.
+
+if so return true; 
+
+
+---
+
 write some ideas here so that you can continue to try this tomorrow,
 every push at least three problems into the queue, and solve at least 3 before you leave.
 
