--- a/033. Search in Rotated Sorted Array.md
+++ b/033. Search in Rotated Sorted Array.md
@@ -45,3 +45,22 @@ public int bsearch(int[] array,int start, int end, int num){
     return -1;
 }
 }
+
+
+```
+
+// 0 1 2 3 4 5 6
+// 4 5 6 7 0 1 2
+// i           j
+// mid = 3
+
+// since A[7] is larger than A[0]
+// so the first half is sorted,
+
+// what I want to find heere is 7, so
+
+//
+
+
+
+```
