--- a/173. Binary Search Tree Iterator.md
+++ b/173. Binary Search Tree Iterator.md
@@ -1,3 +1,44 @@
 
 
-so my idea here is to store all the nodes into a stack, 
+so my idea here is to store all the nodes into a stack,
+
+
+```
+
+public class BSTIterator {
+
+  Stack<TreeNode  > stack;
+// size, pop, push, peek, empty
+
+  public BSTIterator( TreeNode root){
+    stack = new Stack();
+    while( root!=null){
+        stack.push(root);
+        root = root.left;
+    } // end of while
+
+
+  }
+
+  public boolean hasNext(){
+    return !stack.isEmpty();
+  }
+
+  public int next(){
+    TreeNode res = stack.pop();
+
+    if(res.right!=null){
+        TreeNode cur = res.right;
+        while( cur != null){
+          stack.push(cur);
+          cur = cur.left;
+          } // end of while
+    } // end of if
+
+    return res.val;
+
+  }
+}
+
+
+```
