--- a/560. Subarray Sum Equals K.md
+++ b/560. Subarray Sum Equals K.md
@@ -9,6 +9,37 @@ The range of numbers in the array is [-1000, 1000] and the range of the integer 
 
 ---
 
+cool we can solve this problem use a Map
+
+
+1 2 3 3  4  0  5  2
+1 3 6 9 13 13 18 20
+
+
+
+```
+
+public  subarraySum(int[] nums, int k){
+  int sum = 0 ;
+  int count = 0;
+  Map< Integer , Integer > map = new HashMap();
+
+  map.put(0,1);
+  for(int c: nums){
+    sum += cur;
+    if(map.containsKey(sum - k)){
+      count += map.get(sum - k);
+      } // end of if
+
+    map.put(sum, map.getOrDefault(sum,0)+1);
+  }
+
+  return count; 
+}
+
+
+```
+
 
 
 ```
