--- a/681. Next Cloest Time.md
+++ b/681. Next Cloest Time.md
@@ -20,7 +20,7 @@ for second position 1, check less than 24
 for third position 2, check it's less than 6,
 for the fourth position3, check it's less than 60
 
-dfs deeper level. 
+dfs deeper level.
 
 
 for position 4, check the smallest different and update,
@@ -114,6 +114,71 @@ public class Solution{
 
 }
 
+```
+
+
+```
+
+class Solution {
+
+    int distance;
+    String res = "";
+    // "01:34",
+    public String nextClosestTime(String time) {
+        Set<Integer > set = new HashSet();
+        set.add(Integer.parseInt(time.substring(0,1)));
+        set.add(Integer.parseInt(time.substring(1,2)));
+        set.add(Integer.parseInt(time.substring(3,4)));
+        set.add(Integer.parseInt(time.substring(4,5)));
+
+        int min = Integer.parseInt(time.substring(0,2)) * 60 + Integer.parseInt(time.substring(3,5));
+
+        helper();
+
+        return res;
+    }
+
+    private void helper(int position, int min, String s, Set<Integer > set){
+      if(position == 4 ){
+        // compare with the best distnace; if better update the result;
+
+
+      } // end of if
+
+      else if(position == 0){
+        for(int i:  set){
+          if(i<2){
+              helper(1, min, s+(String)(i),set);
+          } // end of if
+        }
+
+      } // end of if
+      else if(position == 1){
+        for(int i : set){
+          if(Integer.parseInt(s)*10 + i < 24){
+            helper(2,min, s+(String)(i)+":",set);
+            } // end of if
+        }
+        } // end of if
+      else if(position == 2){
+        for(int i: set){
+          if(i<6){
+            helper(3,min,s+(String)(i),set);
+            } // end of if
+        }
+        } // end of if
+      else if(position == 3){
+
+        for(int i: set){
+          if(Integer.parseInt(s.substring(3,4) * 10 + i <60)){
+            helper(4,min,s+(String)(i),set);
+            } // end of if
+        }
+
+        } // end of if
+
+    }
+}
 
 
 ```
