--- a/679. 24 Game.md
+++ b/679. 24 Game.md
@@ -15,7 +15,42 @@ for example 1*4 and 8 7, three number to get 24,
 
 if there are only one number, test if it's 24.
 
-if so return true; 
+if so return true;
+
+
+```
+
+boolean res = false;
+final double eps = .001;
+
+public boolean judgePoint24(int[] nums){
+  List<Double> list = new ArrayList();
+  for(int n: nums){
+    arr.add((double) n);
+  }
+
+  helper();
+  return res;
+}
+
+public void helper(List<Double> arr){
+  if(res){return;} // end of if
+  if(arr.size() == 1){
+    if(Math.abs(arr.get(0) - 24.0) < eps){
+      res = true;
+      } // end of if
+      return ;
+    } // end of if
+
+  for(int i = 0; i < arr.size() ; i++){
+    for(int j = 0; j <  i; j++){
+
+      } f// end of for j
+    } // end of for i
+}
+
+
+```
 
 
 ---
@@ -48,6 +83,109 @@ private void helper(List<Double> A){
     } // end of if
 
 
+}
+
+
+```
+
+```
+
+public class Solution {
+  boolean res = false;
+  final double eps = 0.001;
+
+  public  boolean judgePoint24(int[] A){
+    List<Double> list = ne w ArrayList();
+
+
+    for( int n: A){
+      list.add((double)n);
+    }
+
+    helper(list);
+    return res;
+}
+
+public void helper(List<Double > arr){
+  if(res) {return ; } // end of if
+
+  if(arr.size() == 1){
+    if(Math.abs(24.0 - arr.get(0)) <eps){
+      res = true;
+      } // end of if
+      return ;
+    } // end of if
+
+  for(int i = 0; i < arr.size() ; i++){
+
+    } // end of for i
+}
+}
+
+
+
+```
+
+```
+
+boolean res = false;
+final double eps = 0.001;
+
+public  boolean judgePoint24(int[] nums){
+  if( nums== null || nums.length == 0){return false; }
+
+  List< Double > list = new ArrayList();
+
+  for(int n: nums){
+    list.add(n);
+  }
+  helper(list);
+
+  return res;
+}
+
+private void helper  (int [] A){
+  if(res){return ;} // end of if
+
+  if(A.size()==1){
+    if(Math.abs(24.0 - A.get(0) ) < eps){
+      res = true;
+      } // end of if
+
+      return ;
+    } // end of if
+
+    for(int i = 0; i < A.size() ; i++){
+      for(int j = 0; j < i ; j++){
+        List<Double > next = new ArrayList();
+
+        Double d1 = arr.get(i);
+        Double d2 = arr.get(j);
+        next.addAll(Arrays.asList(p1+p2,p1-p2,p2-p1,p1*p2)) ;
+
+        if(Math.abs(p1) > eps){
+          next.add(p2/p1);
+          } // end of if
+
+        if(Math.abs(p2) > eps){
+          next.add(p1/p2);
+          } // end of if
+
+        arr.remove(i);
+        arr.remove(j);
+
+        for(double d: next){
+          arr.add(d);
+          helper(arr);
+          arr.remove(arr.size()-1);
+        }
+
+        arr.add(j,p2);
+        arr.add(i,p1);
+
+        } // end of for j
+
+      } // end of for i
 }
 
 
