--- a/010. Regular Expression Matching.md
+++ b/010. Regular Expression Matching.md
@@ -53,7 +53,52 @@ Here are some conditions to figure out, then the logic can be very straightforwa
 
 
 
+  0 m i s s i s s i p p i    j->p, col
+0 t
+m    
+i      
+s        
+*
+i
+s
+*
+p
+*
+.
 
+  0 m i s * i s * p * .
+0 t f f f f f f f f f f
+m 
+i
+s
+s
+i
+s
+s
+i
+p
+p
+i
+
+```
+
+public  boolean isMatch(String s, String p){
+  if(s == null || p == null ){
+    return false;
+    } // end of if
+
+  boolean[][] dp = new boolean[s.length() +1][p.length()+1];
+
+  dp[0][0] = true;
+
+  for(int i = 0; i < p.length()  ; i++){
+    if(p.charAt(i) == '*' && dp[0][i-1]){
+      dp[0][i+1] = true;
+      } // end of if
+    } // end of for i
+
+
+}
 
 
 ```
