--- a/leetcodes/001.2sum.md
+++ b/leetcodes/001.2sum.md
@@ -52,6 +52,36 @@ public int[] twoSum(int[] numbers, int target) {
 
 ```
 
-this is the main stream solution. 
+this is the main stream solution.
 
 ---
+
+
+```
+
+// if you sort the array, you need log n to search,
+int[] res = new int[2];
+
+Map<Integer , Integer > map = new HashMap();
+if( nums== null || nums.length == 0){
+  return res;
+}
+map.put(nums[0],0);
+int l = nums.length;
+for(int i = 1; i < l ; i++){
+  if(map.containsKey(target - nums[i])){
+      res[0] = map.get(target - nums[i]);
+      res[1] = i+1;
+
+      return res;
+  } // end of if
+  else{
+    map.put(nums[i],i+1);
+  }
+} // end of for i
+
+return res;
+
+
+
+```
