--- a/leetcodes/078.Subsets.md
+++ b/leetcodes/078.Subsets.md
@@ -108,3 +108,24 @@ public void subsets(int[] nums, List<List<Integer>> res, List<Integer> curList, 
 }
 
 ```
+
+```
+
+public void subsets(int[] A, List<List<Integer >> res, List<Integer > curList, int index){
+  if(index == A.length - 1){
+    res.
+    } // end of if
+
+
+}
+
+public List<List<Integer >> subsets(int[] nums){
+    List<List<Integer >> list = new ArrayList();
+    subsets(nums, list, new ArrayList<Integer >(), 0 )
+    return list;
+
+
+}
+
+
+```
