--- a/leetcodes/679. 24 Game.md
+++ b/leetcodes/679. 24 Game.md
@@ -198,3 +198,54 @@ private void helper  (int [] A){
 
 
 ```
+
+4ms Solution
+
+
+```
+class Solution {
+  public boolean judgePoint24(int[] nums) {
+        if (nums.length == 0) return false;
+
+        double[] input = new double[nums.length];
+        for (int i = 0; i < nums.length; i++) {
+            input[i] = nums[i];
+        }
+        return dfsHelper(input, input.length);
+    }
+
+    private boolean dfsHelper(double[] input, int len) {
+        if (len == 1) {
+            return Math.abs(input[0] - 24) <= 1e-6;
+        }
+
+        for (int i = 0; i < len; i++) {
+            for (int j = i + 1; j < len; j++) {
+                double x = input[i];
+                double y = input[j];
+                input[j] = input[len - 1];// put last into j
+
+                input[i] = x + y;
+                if (dfsHelper(input, len - 1)) return true;
+                input[i] = x - y;
+                if (dfsHelper(input, len - 1)) return true;
+                input[i] = y - x;
+                if (dfsHelper(input, len - 1)) return true;
+                input[i] = x * y;
+                if (dfsHelper(input, len - 1)) return true;
+                input[i] = x / y;
+                if (dfsHelper(input, len - 1)) return true;
+                input[i] = y / x;
+                if (dfsHelper(input, len - 1)) return true;
+
+                input[i] = x; // backtrack
+                input[j] = y;
+            }
+        }
+
+        return false;
+    }
+}
+
+
+```
