--- a/leetcodes/033. Search in Rotated Sorted Array.md
+++ b/leetcodes/033. Search in Rotated Sorted Array.md
@@ -64,3 +64,32 @@ public int bsearch(int[] array,int start, int end, int num){
 
 
 ```
+
+
+
+        if(mid > nums[0]){
+            // the first half is ascending
+            if(target >= nums[0]){
+                int temp = Arrays.binarySearch(Arrays.copyOfRange(nums, 0,l/2), target);
+                if (temp<0){
+                    return -1;
+                }
+                return temp;
+            }
+            else{
+                return search(Arrays.copyOfRange(nums,0,l/2), target);
+            }
+
+        }else{
+            // the second half is ascending
+            if(target>mid){
+                int temp = Arrays.binarySearch(Arrays.copyOfRange(nums,l/2+1,l-1),target);
+                if(temp<0){
+                    return -1;
+                }
+                return l/2+temp;
+            }
+            else{
+                return l/2 + search(Arrays.copyOfRange(nums,l/2+1,l-1), target);
+            }
+        }
