--- a/leetcodes/053.Maximum subarray.md
+++ b/leetcodes/053.Maximum subarray.md
@@ -27,5 +27,24 @@ iterate the array, and when the sum is less than 0, it means the later numbers p
 
         return res;
 
-        
+
+```
+
+```
+// -2,1,-3,4,-1,2,1,-5,4
+// -2 1 -2 4 3  5 6 1 5
+// -2 1 1  4 4  5 6 6 6
+
+public int maxSubArray(int[] nums){
+  int max = Integer.MIN_VALUE;
+  int maxCur = 0;
+  for(int i = 0; i < nums.length ; i++){
+    maxCur = Math.max(nums[i], maxCur + nums[i]);
+    max = Math.max(maxCur,max);
+
+  } // end of for i
+  return  max;
+}
+
+
 ```
