--- a/leetcodes/015.3Sum.md
+++ b/leetcodes/015.3Sum.md
@@ -65,3 +65,44 @@ The result of this implementation is just 10%, very slow. So we need to consider
 
 
 ```
+
+```
+
+public  List<List<Integer >> threeSum(int[] nums){
+  java.util.Arrays.sort( nums ); //Collections.reverseOrder()
+  List<List<Integer >> res = new LinkedList<>();
+
+  int l = nums.length;
+  for(int i = 0; i < l ; i++){
+    if( i == 0 || (i>0 && nums[i] != num[i-1]) ){
+      int lo = i +1;
+      int hi = l-1;
+      int sum = 0 - nums[i];
+
+      while( lo < hi ){
+        if(nums[lo] + nums[hi] == sum){
+          res.add(Arrays.asList(nums[i],nums[lo],nums[hi]));
+          while( lo <hi && nums[lo] == nums[lo+1]){lo++;} // end of while
+          while( lo<hi && nums[hi] == nums[hi-1] ){hi--;} // end of while
+
+          lo ++;
+          hi --;
+
+        } // end of if
+        else if(sum > nums[lo] + nums[hi]){
+          lo++;  
+        } // end of if
+        else{
+          hi--;
+        }
+      } // end of while
+
+    } // end of if
+
+  } // end of for i
+  return res;
+
+}
+
+
+```
