--- a/leetcodes/289. Game of Like.md
+++ b/leetcodes/289. Game of Like.md
@@ -35,4 +35,9 @@ for a dead cell, if there are 3 live cell around, it will revive.
 So if we want to
 
 
-00 
+| number | current | next |
+| ------ | ------- | ---- |
+| 00     | die     | die  |
+| 01     | live    | die  |
+| 10     | die     | live |
+| 11     | live    | live |
